# fulllstack-ai-marketing-platform

./: .gitignore
asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
asset-processing-service/src/asset_processing_service/: api_client.py  config.py  job_processor.py  main.py  media_processor.py  models.py
nextjs/: .gitignore  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js
nextjs/app/: page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/projects/: loading.tsx  page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx  (+1 more)
nextjs/app/(landing)/: page.tsx
nextjs/components/: ConfigurePromptsStep.tsx  ConfigurePromptsStepHeader.tsx  GenerateContentStep.tsx  GenerateStepBody.tsx  ProjectList.tsx  PromptContainerCard.tsx  PromptEditorDialog.tsx  PromptsList.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx  TemplateDetailBody.tsx  TemplateDetailHeader.tsx  TemplateDetailView.tsx  TemplateList.tsx  TemplateSelectionPopup.tsx  UserProfileSection.tsx
nextjs/components/project-detail/: ProjectDetailBody.tsx  ProjectDetailHeader.tsx  projectDetailStepper.tsx  projectDetailView.tsx
nextjs/components/ui/: ConfirmationModel.tsx  input.tsx  skeleton.tsx
nextjs/components/upload-step/: ManageUploadStep.tsx  UploadStepBody.tsx  UploadStepHeader.tsx
nextjs/interfaces/: CommonPrompt.ts
nextjs/lib/: constants.ts
nextjs/migrations/: 0000_tan_power_man.sql
nextjs/migrations/meta/: 0000_snapshot.json  _journal.json
nextjs/server/: mutation.ts  queries.ts
nextjs/server/db/: schema.ts
(+19 files in other folders)
