[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "lijohn",email = "lijohnreddy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "openai (>=2.6.1,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "asset_processing_service", from = "src"}]

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
